--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,12 +7,12 @@
 
 .hero {
   text-align: center;
-  margin-bottom: 4rem;
-  padding: 3rem 0;
+  margin-bottom: 0px;
+  padding: 10px 0;
 }
 
 .latest-release {
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
   text-align: center;
   position: relative;
 }
@@ -55,7 +55,7 @@
   font-weight: bold;
   font-family: 'Brush Script MT', cursive;
   color: #000;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
 }
 
